# Starfish

./: .gitignore  README.md  hr.from.josipantolis.starfish.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request  feature_request.yml
.github/workflows/: main.yml
data/: AddressEntry.css  PageTextView.css  TextViewHighlighter.css  gemini-mime-type.xml  gresource.xml  gschema.xml  hr.from.josipantolis.starfish.gschema.xml  meson.build  starfish.appdata.xml.in  starfish.desktop.in
data/static/: apps.gmi  discover.gmi  index.gmi  terminology.gmi  tools.gmi
meson/: post_install.py
po/: POTFILES  hr.from.josipantolis.starfish.pot  hr.po  meson.build
po/extra/: POTFILES  extra.pot
src/: Main.vala  meson.build
src/Core/: BookmarksManager.vala  CertError.vala  CertHash.vala  CertInfo.vala  CertManager.vala  Client.vala  ClientCertFactory.vala  ClientCertRepo.vala  GeminiBody.vala  InternalErrorResponse.vala  Line.vala  LineType.vala  Mime.vala  Response.vala  Session.vala  SessionManager.vala  SessionStorage.vala  SettingsBackedSessionStorage.vala  SettingsBackedStorage.vala  Storage.vala  Tab.vala  TabManager.vala  TextBody.vala  Theme.vala  Uri.vala
src/Templates/: BadRequest.vala  Bookmarks.vala  CertError.vala  CertNotApplicable.vala  ConnectionFailed.vala  FileAccessDenied.vala  Gone.vala  InvalidResponse.vala  NonGeminiRedirect.vala  NotFound.vala  PermFailure.vala  SlowDown.vala  TempFailure.vala  Template.vala  TooManyRedirects.vala  UnsuportedSchema.vala
src/UI/: Application.vala  CertPopover.vala  ClientCertCreateDialog.vala  ClientCertListBox.vala  ContentStack.vala  GemtextRef.vala  GemtextSearchBar.vala  GemtextView.vala  HeaderBar.vala  InputView.vala  LinkEvent.vala  LinkEventType.vala  PageCertErrorView.vala  PageClientCertPickerView.vala  PageDownloadView.vala  PageErrorView.vala  PageImageView.vala  PageStaticErrorView.vala  PageTextView.vala  PreferencesDialog.vala  ResponseView.vala  TabContent.vala  TableOfContent.vala  TextViewHighlighter.vala  Window.vala
test/: TestBase.vala  TestMain.vala  meson.build
test/Core/: BodyTestBase.vala  GeminiBodyTest.vala  LineTest.vala  MimeTest.vala  ResponseTest.vala  TextBodyTest.vala  UriTest.vala
