common_sources = files (
    'Core/BookmarksManager.vala',
    'Core/CertError.vala',
    'Core/CertHash.vala',
    'Core/CertInfo.vala',
    'Core/CertManager.vala',
    'Core/Client.vala',
    'Core/ClientCertFactory.vala',
    'Core/ClientCertRepo.vala',
    'Core/GeminiBody.vala',
    'Core/InternalErrorResponse.vala',
    'Core/Line.vala',
    'Core/LineType.vala',
    'Core/Mime.vala',
    'Core/Response.vala',
    'Core/Session.vala',
    'Core/SessionManager.vala',
    'Core/SettingsBackedStorage.vala',
    'Core/Storage.vala',
    'Core/Tab.vala',
    'Core/TabManager.vala',
    'Core/TextBody.vala',
    'Core/Theme.vala',
    'Core/Uri.vala',

    'Templates/BadRequest.vala',
    'Templates/Bookmarks.vala',
    'Templates/CertNotApplicable.vala',
    'Templates/ConnectionFailed.vala',
    'Templates/FileAccessDenied.vala',
    'Templates/Gone.vala',
    'Templates/InvalidResponse.vala',
    'Templates/NonGeminiRedirect.vala',
    'Templates/NotFound.vala',
    'Templates/PermFailure.vala',
    'Templates/SlowDown.vala',
    'Templates/TempFailure.vala',
    'Templates/Template.vala',
    'Templates/TooManyRedirects.vala',
    'Templates/UnsuportedSchema.vala',

    'UI/Application.vala',
    'UI/CertPopover.vala',
    'UI/ClientCertListBox.vala',
    'UI/ClientCertCreateDialog.vala',
    'UI/ContentStack.vala',
    'UI/GemtextRef.vala',
    'UI/GemtextSearchBar.vala',
    'UI/GemtextView.vala',
    'UI/HeaderBar.vala',
    'UI/InputView.vala',
    'UI/LinkEvent.vala',
    'UI/LinkEventType.vala',
    'UI/PageCertErrorView.vala',
    'UI/PageClientCertPickerView.vala',
    'UI/PageDownloadView.vala',
    'UI/PageImageView.vala',
    'UI/PageStaticErrorView.vala',
    'UI/PageTextView.vala',
    'UI/PreferencesDialog.vala',
    'UI/ResponseView.vala',
    'UI/TabContent.vala',
    'UI/TableOfContent.vala',
    'UI/TextViewHighlighter.vala',
    'UI/Window.vala'
)

sources = common_sources + files (
    'Main.vala'
)
